--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -235,6 +235,7 @@
 "balance.info.detail.balance.title" = "账户余额";
 "balance.info.detail.unconfirmed.title" = "在途";
 "balance.info.detail.unconfirmed.quota.title" = "(配额 %@ UT)";
+"balance.info.detail.available.amount.title" = "可用余额";
 "balance.info.detail.pledge.amount.title" = "已抵押";
 "balance.info.detail.show.transactions.button.title" = "到以太坊浏览器查看交易记录";
 "balance.info.detail.reveice.button.title" = "收款";
@@ -1233,13 +1234,16 @@
 "dex.home.page.header.button.transfer.title" = "资金划转";
 "dex.home.page.header.button.deposit.title" = "充值";
 "dex.home.page.header.button.withdraw.title" = "提现";
-"dex.home.page.header.button.hide。small.title" = "隐藏小额币种";
+"dex.home.page.header.button.hide.small.title" = "隐藏小额币种";
 
 "dex.token.detail.page.title" = "资产详情";
 "dex.token.detail.page.header.total" = "总额";
 "dex.token.detail.page.header.available" = "可用余额";
 "dex.token.detail.page.header.lock.place.order" = "下单冻结";
 
+"dex.token.detail.page.header.lock.vite.pledge" = "抵押获取配额冻结";
+"dex.token.detail.page.header.lock.vite.sbp" = "抵押SBP冻结";
+"dex.token.detail.page.header.lock.vite.full.node" = "抵押全节点冻结";
 "dex.token.detail.page.header.lock.vite.mining" = "挖矿冻结";
 "dex.token.detail.page.header.lock.vite.mining.cancel" = "解锁中";
 "dex.token.detail.page.header.lock.vite.vip" = "VIP冻结";
@@ -1256,3 +1260,5 @@
 "dex.token.detail.page.button.transfer" = "划转";
 "dex.token.detail.page.button.send" = "链内转账";
 "dex.token.detail.page.button.trading" = "交易";
+
+"dex.token.market.selector.title" = "选择交易对";
