--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -899,6 +899,12 @@
 "bifrost.operation.sign.message.content" = "Signature Content";
 "bifrost.operation.sign.message.type.trade.value" = "Trade";
 
+"bifrost.create.contract.title" = "Create Contract";
+"bifrost.create.contract.title.contract.address" = "Contract Address";
+"bifrost.create.contract.title.amount" = "Amount";
+"bifrost.create.contract.title.fee" = "Fee";
+"bifrost.create.contract.title.data" = "Data";
+
 //bnb
 "token.list.page.section.bnb.header" = "Binance Network";
 "bnb.send.page.feeView.titleLabel.title" = "Fee";
