--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -401,6 +401,13 @@
 "quota.alert.quota.button.title" = "Stake VITE";
 "quota.float.view.title" = "Computing PoW to Secure Quota for this Transaction...";
 "quota.float.view.tip" = "This Transaction costs %@UT";
+
+"quota.pow.tip.float.view.title" = "Insufficient quota";
+"quota.pow.tip.float.view.message.1" = "VITE Only %@ transactions can be made per day per address without staking VITE. Your address has exhausted all 5 transactions. Please go to the quota page and stake your VITE to perform more transactions.";
+"quota.pow.tip.float.view.message.2" = "Transaction cannot be executed due to insufficient quota. Please go to the quota page and stake your VITE to increase quota. Staked VITE can be redeemed after 3 days. ";
+"quota.pow.tip.float.view.pledge" = "Stake now";
+"quota.pow.tip.float.view.notNow" = "Cancel";
+
 "quota.pow.finished.float.view.title" = "Transaction Sent";
 "quota.pow.finished.float.view.h1" = "You spent %1$@S in this PoW computation, and secured and used %2$@UT.";
 "quota.pow.finished.float.view.h2" = "You may withdraw your staked VITE after 3 days. If the quota you received from staking is sufficient for a transaction, you can skip this step of PoW.";
