--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -405,6 +405,13 @@
 "quota.alert.quota.button.title" = "抵押 VITE";
 "quota.float.view.title" = "正在為您計算PoW獲取配額";
 "quota.float.view.tip" = "本次交易需消耗%@UT";
+
+"quota.pow.tip.float.view.title" = "配額不足";
+"quota.pow.tip.float.view.message.1" = "每個地址每天有%@筆交易不需要抵押，您當前地址次數已用盡，請前往配額頁面抵押VITE";
+"quota.pow.tip.float.view.message.2" = "配額不足，無法完成交易，請前往配額頁面抵押VITE獲取配額，抵押的VITE三天后可取回";
+"quota.pow.tip.float.view.pledge" = "去抵押";
+"quota.pow.tip.float.view.notNow" = "暫不抵押";
+
 "quota.pow.finished.float.view.title" = "交易已發出";
 "quota.pow.finished.float.view.h1" = "計算PoW花費%1$@秒，為您獲得%2$@UT";
 "quota.pow.finished.float.view.h2" = "抵押三天后可免費取回。當抵押獲得的配額足夠交易時，您將直接跳過PoW步驟及本彈窗。";
