--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -408,9 +408,9 @@
 
 "quota.pow.tip.float.view.title" = "配額不足";
 "quota.pow.tip.float.view.message.1" = "每個地址每天有%@筆交易不需要抵押，您當前地址次數已用盡，請前往配額頁面抵押VITE";
-"quota.pow.tip.float.view.message.2" = "配額不足，無法完成交易，請前往配額頁面抵押VITE獲取配額，抵押的VITE三天后可取回";
+"quota.pow.tip.float.view.message.2" = "配額不足，請前往配額頁面抵押VITE獲取配額，抵押的VITE三天后可取回";
 "quota.pow.tip.float.view.pledge" = "去抵押";
-"quota.pow.tip.float.view.notNow" = "暫不抵押";
+"quota.pow.tip.float.view.notNow" = "跳过抵押";
 
 "quota.pow.finished.float.view.title" = "交易已發出";
 "quota.pow.finished.float.view.h1" = "計算PoW花費%1$@秒，為您獲得%2$@UT";
@@ -636,6 +636,7 @@
 "confirm.transaction.page.grin.confirm.button" = "確認支付";
 
 // Grin
+"grin.close.tips" = "Grin錢包暫不可用，建議您導出助記詞到其他Grin錢包";
 "grin.balance.total" = "全部";
 "grin.balance.spendable" = "可用餘額";
 "grin.balance.awaiting" = "待確認";
