--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -406,11 +406,14 @@
 "quota.float.view.title" = "正在為您計算PoW獲取配額";
 "quota.float.view.tip" = "本次交易需消耗%@UT";
 
-"quota.pow.tip.float.view.title" = "配額不足";
+"quota.pow.tip.float.view.title.1" = "配額不足";
 "quota.pow.tip.float.view.message.1" = "每個地址每天有%@筆交易不需要抵押，您當前地址%@次已用盡，請前往配額頁面抵押VITE";
+"quota.pow.tip.float.view.pledge.1" = "去抵押";
+
+"quota.pow.tip.float.view.title.2" = "配額不足";
 "quota.pow.tip.float.view.message.2" = "配額不足，請前往配額頁面抵押VITE獲取配額，抵押的VITE三天后可取回";
-"quota.pow.tip.float.view.pledge" = "去抵押";
-"quota.pow.tip.float.view.notNow" = "跳过抵押";
+"quota.pow.tip.float.view.pledge.2" = "去抵押";
+"quota.pow.tip.float.view.notNow.2" = "跳过抵押";
 
 "quota.pow.finished.float.view.title" = "交易已發出";
 "quota.pow.finished.float.view.h1" = "計算PoW花費%1$@秒，為您獲得%2$@UT";
