--- a/ViteBusiness/Assets/de-DE.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/de-DE.lproj/Localizable.strings
@@ -241,7 +241,7 @@
 "balance.info.detail.vote" = "Vote";
 "balance.info.detail.pledge" = "Get Quota";
 "balance.info.detail.exchange.vite" = "VITE Conversion";
-"balance.info.detail.pledge.count.content" = "Spendable Quota/Quota Limit";
+"balance.info.detail.pledge.count.content" = "Quota Available/Quota Limit";
 "balance.info.detail.pledge.none.tip" = "0 UT/0 UT";
 
 "gateway.info.detail.page.title" = "Gateway Details";
@@ -288,8 +288,9 @@
 "send.page.title" = "Send";
 "send.page.my.address.title" = "My %@ Address";
 "send.page.my.balance.title" = "Balance";
-"send.page.my.pledge.title" = "Benefited Stake";
-"send.page.my.quota.title" = "Spendable Quota/Quota Limit";
+"send.page.wallet.balance.title" = "Wallet Balance";
+"send.page.my.pledge.title" = "Locked Amount";
+"send.page.my.quota.title" = "Quota Available/Quota Limit";
 "send.page.my.max.tx.count.title" = "Maximum Amount of Tx";
 "send.page.add.my.address.button.title" = "Mine";
 "send.page.vite.contacts.button.title" = "VITE Contact Address";
@@ -380,13 +381,13 @@
 /* quota manage */
 "quota.manage.page.title" = "Get Quota";
 "quota.manage.page.input.address.title" = "Quota Beneficiary";
-"quota.manage.page.quota.money.title" = "Staking Amount";
+"quota.manage.page.quota.money.title" = "Locked Amount";
 "quota.manage.page.quota.quota.title" = "Quota";
 "quota.manage.page.quota.money.placeholder" = "Please input amount, minimum 134 VITE";
-"quota.manage.page.quota.snapshoot.height.title" = "Staking Freeze Duration";
+"quota.manage.page.quota.snapshoot.height.title" = "Lock period";
 "quota.manage.page.quota.snapshoot.height.desc" = "Approx %@ days";
-"quota.manage.page.submit.btn.title" = "Submit Staking";
-"quota.manage.page.check.quotaList.btn.title" = "Staking List";
+"quota.manage.page.submit.btn.title" = "Submit to lock";
+"quota.manage.page.check.quotaList.btn.title" = "Locking Record";
 "quota.manage.page.toast.money.error" = "Staking amount should not be less than 134";
 "quota.submit.pop.desc" = "Make sure to stake %@ to obtain quota, you cannot withdraw until about 3 days after staking comes into effect.";
 "quota.submit.pop.submit.btn.title" = "Confirm";
@@ -419,8 +420,8 @@
 
 /* Peldge History */
 "peldge.message" = "Currently Vite App only supports checking staking list, please go to Web Wallet to withdraw staked tokens on due date if needed.";
-"peldge.deadline" = "Due Date";
-"peldge.title" = "Staking History";
+"peldge.deadline" = "Time available to unlock";
+"peldge.title" = "Locking Record";
 "peldge.address.title" = "Beneficiary";
 "peldge.cancel.peldge.button.title" = "Withdraw";
 "peldge.cancel.pledge.withdrawing.title" = "Withdrawing";
