--- a/ViteBusiness/Assets/es-ES.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/es-ES.lproj/Localizable.strings
@@ -234,7 +234,7 @@
 "balance.info.detail.unconfirmed.title" = "Unreceived";
 "balance.info.detail.unconfirmed.quota.title" = "(%@ UT)";
 "balance.info.detail.available.amount.title" = "Available";
-"balance.info.detail.pledge.amount.title" = "Staked";
+"balance.info.detail.pledge.amount.title" = "Locked";
 "balance.info.detail.show.transactions.button.title" = "Check transaction history in Ethereum Explorer";
 "balance.info.detail.reveice.button.title" = "Receive";
 "balance.info.detail.send.button.title" = "Send";
@@ -422,7 +422,7 @@
 "peldge.deadline" = "Due Date";
 "peldge.title" = "Staking History";
 "peldge.address.title" = "Beneficiary";
-"peldge.cancel.peldge.button.title" = "Withdraw";
+"peldge.cancel.peldge.button.title" = "Unlock";
 "peldge.cancel.pledge.withdrawing.title" = "Withdrawing";
 "peldge.cancel.pledge.amount.error.toast" = "The minimum withdraw amount is 134 VITE, please stake enough VITE first.";
 "peldge.cancel.pledge.agent.error.toast" = "Not common stake, please try withdrawal where you placed the stake.";
